[gd_scene load_steps=17 format=2]

[ext_resource path="res://Source/VFX/unshaded.tres" type="Material" id=1]
[ext_resource path="res://Source/Images/UI/exitRight.png" type="Texture" id=2]
[ext_resource path="res://Source/Images/UI/forward.png" type="Texture" id=3]
[ext_resource path="res://Source/Images/SocialNetworksLogos/itch-io.svg" type="Texture" id=4]
[ext_resource path="res://Source/Images/SocialNetworksLogos/paypal (1).svg" type="Texture" id=5]
[ext_resource path="res://Source/Images/UI/information.png" type="Texture" id=6]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://Source/Images/UI/leaderboardsComplex.png" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Source/VFX/RawFonts/Kenney Blocks.ttf"

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = SubResource( 10 )

[sub_resource type="GDScript" id=14]
resource_name = "ItchIoLink"
script/source = "extends Button

export(String) var URL


func _on_ItchIoLink_pressed():
	var _v = OS.shell_open(URL)
"

[sub_resource type="GDScript" id=15]
resource_name = "PayPalLink"
script/source = "extends Button

export(String) var URL

func _on_PayPalLink_pressed():
	var _v = OS.shell_open(URL)
"

[sub_resource type="Animation" id=11]
resource_name = "HIDDEN"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "RESET"
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "hide"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.000290768, 3.6943, 0.2, -2541.06, -1280, -0.6, 125.569, 0.841744, -176.161 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "show"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1280, -0.00146925, 3.69416, 0.3, -754.295, 0, -0.9, -17.4111, 1.57997, 30.5656 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="MainMenu" type="Node" groups=["MainMenu"]]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
material = ExtResource( 1 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Control"]
modulate = Color( 15, 15, 15, 1 )
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -360.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 9 )
text = "Asteroid Attack!"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 256.0
margin_top = 320.0
margin_right = -256.0
margin_bottom = -106.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 75

[node name="Play" type="Button" parent="Control/VBoxContainer"]
modulate = Color( 2, 2, 2, 1 )
use_parent_material = true
margin_left = 259.0
margin_right = 509.0
margin_bottom = 109.0
rect_min_size = Vector2( 250, 0 )
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_right = NodePath("../../VBoxContainer2/Leaderboard")
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Play"
icon = ExtResource( 3 )

[node name="Exit" type="Button" parent="Control/VBoxContainer"]
modulate = Color( 2, 2, 2, 1 )
use_parent_material = true
margin_left = 259.0
margin_top = 184.0
margin_right = 509.0
margin_bottom = 294.0
rect_min_size = Vector2( 250, 0 )
focus_neighbour_right = NodePath("../../VBoxContainer2/Leaderboard")
focus_neighbour_bottom = NodePath("../Play")
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Exit"
icon = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Control"]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1192.0
margin_top = 542.0
margin_right = -10.0
margin_bottom = -8.0
__meta__ = {
"_edit_lock_": true
}

[node name="Leaderboard" type="Button" parent="Control/VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
use_parent_material = true
margin_right = 78.0
margin_bottom = 83.0
rect_clip_content = true
focus_neighbour_left = NodePath("../../VBoxContainer/Play")
focus_neighbour_top = NodePath("../Information")
focus_neighbour_bottom = NodePath("../Information")
size_flags_horizontal = 15
size_flags_vertical = 15
icon = ExtResource( 8 )
flat = true
icon_align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Information" type="Button" parent="Control/VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
use_parent_material = true
margin_top = 87.0
margin_right = 78.0
margin_bottom = 170.0
focus_neighbour_left = NodePath("../../VBoxContainer/Play")
focus_neighbour_top = NodePath("../Leaderboard")
focus_neighbour_bottom = NodePath("../Leaderboard")
size_flags_horizontal = 15
size_flags_vertical = 15
icon = ExtResource( 6 )
flat = true
icon_align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -174.0
margin_right = 137.0
margin_bottom = -18.0
custom_constants/separation = 17
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ItchIoLink" type="Button" parent="Control/VBoxContainer3"]
margin_right = 135.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true
script = SubResource( 14 )
URL = "https://leo102.itch.io"

[node name="PayPalLink" type="Button" parent="Control/VBoxContainer3"]
margin_top = 86.0
margin_right = 135.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 5 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true
script = SubResource( 15 )
URL = "https://www.paypal.com/donate/?hosted_button_id=RBTZBG4MQRWR2"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/HIDDEN = SubResource( 11 )
anims/RESET = SubResource( 1 )
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )

[node name="Sounds" type="Node" parent="."]

[node name="Explosion" type="AudioStreamPlayer2D" parent="Sounds"]

[connection signal="pressed" from="Control/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="pressed" from="Control/VBoxContainer2/Information" to="." method="_on_Information_pressed"]
[connection signal="pressed" from="Control/VBoxContainer3/ItchIoLink" to="Control/VBoxContainer3/ItchIoLink" method="_on_ItchIoLink_pressed"]
[connection signal="pressed" from="Control/VBoxContainer3/PayPalLink" to="Control/VBoxContainer3/PayPalLink" method="_on_PayPalLink_pressed"]
